[package]
name = "zwp-virtual-keyboard"
version = "0.1.0"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.27.0"
wayland-commons = "0.27.0"

[build-dependencies]
wayland-scanner = "0.27.0"